--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='B18' class='cll flt cnt lrd brd nsss'>B 18</div>
     <div id='B19' class='cll flt cnt drd brd nsss'>B 19</div>
 
-    <div id='C00' class='cll flt cnt dgr brd snns'>
-      <div id='golGre1' class='cnt gol rnd arg'>C 00</div>
+    <div id='C00' class='cll flt cnt dgr brd snns arg'>
+      <div id='golGre1' class='cnt gol rnd txg'>C 00</div>
     </div>
-    <div id='C01' class='cll flt cnt lgr brd ssnn arg'>C 01</div>
+    <div id='C01' class='cll flt cnt lgr brd ssnn txg arg'>C 01</div>
     <div id='C02' class='cll flt cnt drd brd snss'>C 02</div>
     <div id='C03' class='cll flt cnt lrd brd snnn'>C 03</div>
     <div id='C04' class='cll flt cnt drd brd sdnn'>C 04</div>
@@ -97,16 +97,16 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='C15' class='cll flt cnt lrd brd snnd'>C 15</div>
     <div id='C16' class='cll flt cnt drd brd snnn'>C 16</div>
     <div id='C17' class='cll flt cnt lrd brd sssn'>C 17</div>
-    <div id='C18' class='cll flt cnt dbl brd snns arb'>C 18</div>
-    <div id='C19' class='cll flt cnt lbl brd ssnn'>
-      <div id='golBlu1' class='cnt gol rnd arb'>C 19</div>
+    <div id='C18' class='cll flt cnt dbl brd snns txb arb'>C 18</div>
+    <div id='C19' class='cll flt cnt lbl brd ssnn arb'>
+      <div id='golBlu1' class='cnt gol rnd txb'>C 19</div>
     </div>
 
-    <div id='D00' class='cll flt cnt lgr brd nnns'>
-      <div id='golGre2' class='cnt gol rnd sc1 arg'>D 00</div>
+    <div id='D00' class='cll flt cnt lgr brd nnns arg'>
+      <div id='golGre2' class='cnt gol rnd sc1 txg'>D 00</div>
     </div>
-    <div id='D01' class='cll flt cnt dgr arg'>D 01</div>
-    <div id='D02' class='cll flt cnt lgr brd ssnn arg'>D 02</div>
+    <div id='D01' class='cll flt cnt dgr txg arg'>D 01</div>
+    <div id='D02' class='cll flt cnt lgr brd ssnn txg arg'>D 02</div>
     <div id='D03' class='cll flt cnt drd brd nnss'>D 03</div>
     <div id='D04' class='cll flt cnt lrd brd ndnn'>D 04</div>
     <div id='D05' class='cll flt cnt drd brd nnnd'>D 05</div>
@@ -121,18 +121,18 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='D14' class='cll flt cnt lrd brd ndnn'>D 14</div>
     <div id='D15' class='cll flt cnt drd brd nnnd'>D 15</div>
     <div id='D16' class='cll flt cnt lrd brd nssn'>D 16</div>
-    <div id='D17' class='cll flt cnt dbl brd snns arb'>D 17</div>
-    <div id='D18' class='cll flt cnt lbl arb'>D 18</div>
-    <div id='D19' class='cll flt cnt dbl brd nsnn'>
-      <div id='golBlu2' class='cnt gol rnd arb'>D 19</div>
+    <div id='D17' class='cll flt cnt dbl brd snns txb arb'>D 17</div>
+    <div id='D18' class='cll flt cnt lbl txb arb'>D 18</div>
+    <div id='D19' class='cll flt cnt dbl brd nsnn arb'>
+      <div id='golBlu2' class='cnt gol rnd txb'>D 19</div>
     </div>
 
-    <div id='E00' class='cll flt cnt dgr brd nnns'>
-      <div id='golGre3' class='cnt gol rnd sc1 arg'>E 00</div>
+    <div id='E00' class='cll flt cnt dgr brd nnns arg'>
+      <div id='golGre3' class='cnt gol rnd sc1 txg'>E 00</div>
     </div>
-    <div id='E01' class='cll flt cnt lgr arg'>E 01</div>
-    <div id='E02' class='cll flt cnt dgr arg'>E 02</div>
-    <div id='E03' class='cll flt cnt lgr brd ssnn arg'>E 03</div>
+    <div id='E01' class='cll flt cnt lgr txg arg'>E 01</div>
+    <div id='E02' class='cll flt cnt dgr txg arg'>E 02</div>
+    <div id='E03' class='cll flt cnt lgr brd ssnn txg arg'>E 03</div>
     <div id='E04' class='cll flt cnt drd brd ndns'>E 04</div>
     <div id='E05' class='cll flt cnt lrd brd nnnd'>E 05</div>
     <div id='E06' class='cll flt cnt drd'>E 06</div>
@@ -145,19 +145,19 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='E13' class='cll flt cnt lrd'>E 13</div>
     <div id='E14' class='cll flt cnt drd brd ndnn'>E 14</div>
     <div id='E15' class='cll flt cnt lrd brd nsnd'>E 15</div>
-    <div id='E16' class='cll flt cnt dbl brd snns arb'>E 16</div>
-    <div id='E17' class='cll flt cnt lbl arb'>E 17</div>
-    <div id='E18' class='cll flt cnt dbl arb'>E 18</div>
-    <div id='E19' class='cll flt cnt lbl brd nsnn'>
-      <div id='golBlu3' class='cnt gol rnd arb'>E 19</div>
+    <div id='E16' class='cll flt cnt dbl brd snns txb arb'>E 16</div>
+    <div id='E17' class='cll flt cnt lbl txb arb'>E 17</div>
+    <div id='E18' class='cll flt cnt dbl txb arb'>E 18</div>
+    <div id='E19' class='cll flt cnt lbl brd nsnn arb'>
+      <div id='golBlu3' class='cnt gol rnd txb'>E 19</div>
     </div>
 
-    <div id='F00' class='cll flt cnt lgr brd nnns'>
-      <div id='golGre4' class='cnt gol rnd sc1 arg'>F 00</div>
+    <div id='F00' class='cll flt cnt lgr brd nnns arg'>
+      <div id='golGre4' class='cnt gol rnd sc1 txg'>F 00</div>
     </div>
-    <div id='F01' class='cll flt cnt dgr arg'>F 01</div>
-    <div id='F02' class='cll flt cnt lgr arg'>F 02</div>
-    <div id='F03' class='cll flt cnt dgr brd nsnn arg'>F 03</div>
+    <div id='F01' class='cll flt cnt dgr txg arg'>F 01</div>
+    <div id='F02' class='cll flt cnt lgr txg arg'>F 02</div>
+    <div id='F03' class='cll flt cnt dgr brd nsnn txg arg'>F 03</div>
     <div id='F04' class='cll flt cnt lrd brd ndns'>F 04</div>
     <div id='F05' class='cll flt cnt drd brd nnnd'>F 05</div>
     <div id='F06' class='cll flt cnt lrd'>F 06</div>
@@ -170,19 +170,19 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='F13' class='cll flt cnt drd'>F 13</div>
     <div id='F14' class='cll flt cnt lrd brd ndnn'>F 14</div>
     <div id='F15' class='cll flt cnt drd brd nsnd'>F 15</div>
-    <div id='F16' class='cll flt cnt lbl brd nnns arb'>F 16</div>
-    <div id='F17' class='cll flt cnt dbl arb'>F 17</div>
-    <div id='F18' class='cll flt cnt lbl arb'>F 18</div>
-    <div id='F19' class='cll flt cnt dbl brd nsnn'>
-      <div id='golBlu4' class='cnt gol rnd arb'>F 19</div>
+    <div id='F16' class='cll flt cnt lbl brd nnns txb arb'>F 16</div>
+    <div id='F17' class='cll flt cnt dbl txb arb'>F 17</div>
+    <div id='F18' class='cll flt cnt lbl txb arb'>F 18</div>
+    <div id='F19' class='cll flt cnt dbl brd nsnn arb'>
+      <div id='golBlu4' class='cnt gol rnd txb'>F 19</div>
     </div>
 
-    <div id='G00' class='cll flt cnt dgr brd nnns'>
-      <div id='golGre5' class='cnt gol rnd sc1 arg'>G 00</div>
+    <div id='G00' class='cll flt cnt dgr brd nnns arg'>
+      <div id='golGre5' class='cnt gol rnd sc1 txg'>G 00</div>
     </div>
-    <div id='G01' class='cll flt cnt lgr arg'>G 01</div>
-    <div id='G02' class='cll flt cnt dgr arg'>G 02</div>
-    <div id='G03' class='cll flt cnt lgr brd nsnn arg'>G 03</div>
+    <div id='G01' class='cll flt cnt lgr txg arg'>G 01</div>
+    <div id='G02' class='cll flt cnt dgr txg arg'>G 02</div>
+    <div id='G03' class='cll flt cnt lgr brd nsnn txg arg'>G 03</div>
     <div id='G04' class='cll flt cnt drd brd ndns'>G 04</div>
     <div id='G05' class='cll flt cnt lrd brd nnnd'>G 05</div>
     <div id='G06' class='cll flt cnt drd'>G 06</div>
@@ -195,19 +195,19 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='G13' class='cll flt cnt lrd'>G 13</div>
     <div id='G14' class='cll flt cnt drd brd ndnn'>G 14</div>
     <div id='G15' class='cll flt cnt lrd brd nsnd'>G 15</div>
-    <div id='G16' class='cll flt cnt dbl brd nnns arb'>G 16</div>
-    <div id='G17' class='cll flt cnt lbl arb'>G 17</div>
-    <div id='G18' class='cll flt cnt dbl arb'>G 18</div>
-    <div id='G19' class='cll flt cnt lbl brd nsnn'>
-      <div id='golBlu5' class='cnt gol rnd arb'>G 19</div>
+    <div id='G16' class='cll flt cnt dbl brd nnns txb arb'>G 16</div>
+    <div id='G17' class='cll flt cnt lbl txb arb'>G 17</div>
+    <div id='G18' class='cll flt cnt dbl txb arb'>G 18</div>
+    <div id='G19' class='cll flt cnt lbl brd nsnn arb'>
+      <div id='golBlu5' class='cnt gol rnd txb'>G 19</div>
     </div>
 
-    <div id='H00' class='cll flt cnt lgr brd nnns'>
-      <div id='golGre6' class='cnt gol rnd sc1 arg'>H 00</div>
+    <div id='H00' class='cll flt cnt lgr brd nnns arg'>
+      <div id='golGre6' class='cnt gol rnd sc1 txg'>H 00</div>
     </div>
-    <div id='H01' class='cll flt cnt dgr arg'>H 01</div>
-    <div id='H02' class='cll flt cnt lgr arg'>H 02</div>
-    <div id='H03' class='cll flt cnt dgr brd nssn arg'>H 03</div>
+    <div id='H01' class='cll flt cnt dgr txg arg'>H 01</div>
+    <div id='H02' class='cll flt cnt lgr txg arg'>H 02</div>
+    <div id='H03' class='cll flt cnt dgr brd nssn txg arg'>H 03</div>
     <div id='H04' class='cll flt cnt lrd brd ndns'>H 04</div>
     <div id='H05' class='cll flt cnt drd brd nnnd'>H 05</div>
     <div id='H06' class='cll flt cnt lrd'>H 06</div>
@@ -220,18 +220,18 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='H13' class='cll flt cnt drd'>H 13</div>
     <div id='H14' class='cll flt cnt lrd brd ndnn'>H 14</div>
     <div id='H15' class='cll flt cnt drd brd nsnd'>H 15</div>
-    <div id='H16' class='cll flt cnt lbl brd nnss arb'>H 16</div>
-    <div id='H17' class='cll flt cnt dbl arb'>H 17</div>
-    <div id='H18' class='cll flt cnt lbl arb'>H 18</div>
-    <div id='H19' class='cll flt cnt dbl brd nsnn'>
-      <div id='golBlu6' class='cnt gol rnd arb'>H 19</div>
+    <div id='H16' class='cll flt cnt lbl brd nnss txb arb'>H 16</div>
+    <div id='H17' class='cll flt cnt dbl txb arb'>H 17</div>
+    <div id='H18' class='cll flt cnt lbl txb arb'>H 18</div>
+    <div id='H19' class='cll flt cnt dbl brd nsnn arb'>
+      <div id='golBlu6' class='cnt gol rnd txb'>H 19</div>
     </div>
 
-    <div id='I00' class='cll flt cnt dgr brd nnns'>
-      <div id='golGre7' class='cnt gol rnd sc1 arg'>I 00</div>
+    <div id='I00' class='cll flt cnt dgr brd nnns arg'>
+      <div id='golGre7' class='cnt gol rnd sc1 txg'>I 00</div>
     </div>
-    <div id='I01' class='cll flt cnt lgr arg'>I 01</div>
-    <div id='I02' class='cll flt cnt dgr brd nssn arg'>I 02</div>
+    <div id='I01' class='cll flt cnt lgr txg arg'>I 01</div>
+    <div id='I02' class='cll flt cnt dgr brd nssn txg arg'>I 02</div>
     <div id='I03' class='cll flt cnt lrd brd snns'>I 03</div>
     <div id='I04' class='cll flt cnt drd brd ndnn'>I 04</div>
     <div id='I05' class='cll flt cnt lrd brd nnnd'>I 05</div>
@@ -246,16 +246,16 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='I14' class='cll flt cnt drd brd ndnn'>I 14</div>
     <div id='I15' class='cll flt cnt lrd brd nnnd'>I 15</div>
     <div id='I16' class='cll flt cnt drd brd ssnn'>I 16</div>
-    <div id='I17' class='cll flt cnt lbl brd nnss arb'>I 17</div>
-    <div id='I18' class='cll flt cnt dbl arb'>I 18</div>
-    <div id='I19' class='cll flt cnt lbl brd nsnn'>
-      <div id='golBlu7' class='cnt gol rnd arb'>I 19</div>
+    <div id='I17' class='cll flt cnt lbl brd nnss txb arb'>I 17</div>
+    <div id='I18' class='cll flt cnt dbl txb arb'>I 18</div>
+    <div id='I19' class='cll flt cnt lbl brd nsnn arb'>
+      <div id='golBlu7' class='cnt gol rnd txb'>I 19</div>
     </div>
 
-    <div id='J00' class='cll flt cnt lgr brd nnss'>
-      <div id='golGre8' class='cnt gol rnd sc1 arg'>J 00</div>
+    <div id='J00' class='cll flt cnt lgr brd nnss arg'>
+      <div id='golGre8' class='cnt gol rnd sc1 txg'>J 00</div>
     </div>
-    <div id='J01' class='cll flt cnt dgr brd nssn arg'>J 01</div>
+    <div id='J01' class='cll flt cnt dgr brd nssn txg arg'>J 01</div>
     <div id='J02' class='cll flt cnt lrd brd snss'>J 02</div>
     <div id='J03' class='cll flt cnt drd brd nnsn'>J 03</div>
     <div id='J04' class='cll flt cnt lrd brd ndsn'>J 04</div>
@@ -272,9 +272,9 @@ This standard form is called TORUS and this iteration is meant to be it!
     <div id='J15' class='cll flt cnt drd brd nnsd'>J 15</div>
     <div id='J16' class='cll flt cnt lrd brd nnsn'>J 16</div>
     <div id='J17' class='cll flt cnt drd brd sssn'>J 17</div>
-    <div id='J18' class='cll flt cnt lbl brd nnss arb'>J 18</div>
-    <div id='J19' class='cll flt cnt dbl brd nssn'>
-      <div id='golBlu8' class='cnt gol rnd arb'>J 19</div>
+    <div id='J18' class='cll flt cnt lbl brd nnss txb arb'>J 18</div>
+    <div id='J19' class='cll flt cnt dbl brd nssn arb'>
+      <div id='golBlu8' class='cnt gol rnd txb'>J 19</div>
     </div>
 
     <div id='K00' class='cll flt cnt drd brd ssns'>K 00</div>
@@ -606,8 +606,8 @@ This standard form is called TORUS and this iteration is meant to be it!
 </script>
 
 <script type='text/javascript' src='vTool.js'></script>
-<script type='text/javascript' src='wData.js'></script>
-<script type='text/javascript' src='xPage.js'></script>
+<script type='text/javascript' src='wPage.js'></script>
+<script type='text/javascript' src='xData.js'></script>
 <script type='text/javascript' src='yLstn.js'></script>
 <script type='text/javascript' src='zMain.js'></script>
 
