--- a/index.html
+++ b/index.html
@@ -360,181 +360,181 @@ This standard form is called TORUS and this iteration is meant to be it!
     -->
     <div id='T00' class='abs stn btn rnd'>
       <svg id='minT00' width='42px' height='42px'>
-        <rect id='minT00' width='6' height='6' x='14' y='25' class='svg'/>
-        <rect id='minT00' width='6' height='6' x='14' y='18' class='svg'/>
-        <rect id='minT00' width='6' height='6' x='21' y='18' class='svg'/>
-        <rect id='minT00' width='6' height='6' x='21' y='11' class='svg'/>
+        <rect id='minT00' width='6' height='6' x='14' y='25' class='svg glw00'/>
+        <rect id='minT00' width='6' height='6' x='14' y='18' class='svg glw00'/>
+        <rect id='minT00' width='6' height='6' x='21' y='18' class='svg glw00'/>
+        <rect id='minT00' width='6' height='6' x='21' y='11' class='svg glw00'/>
       </svg>
     </div>
 
     <div id='T01' class='abs stn btn rnd'>
       <svg id='minT01' width='42px' height='42px'>
-        <rect id='minT01' width='6' height='6' x='14' y='11' class='svg'/>
-        <rect id='minT01' width='6' height='6' x='21' y='18' class='svg'/>
-        <rect id='minT01' width='6' height='6' x='21' y='25' class='svg'/>
-        <rect id='minT01' width='6' height='6' x='14' y='25' class='svg'/>
+        <rect id='minT01' width='6' height='6' x='14' y='11' class='svg glw01'/>
+        <rect id='minT01' width='6' height='6' x='21' y='18' class='svg glw01'/>
+        <rect id='minT01' width='6' height='6' x='21' y='25' class='svg glw01'/>
+        <rect id='minT01' width='6' height='6' x='14' y='25' class='svg glw01'/>
       </svg>
     </div>
 
     <div id='T02' class='abs stn btn rnd'>
       <svg id='minT02' width='42px' height='42px'>
-        <rect id='minT02' width='6' height='6' x='14' y='25' class='svg'/>
-        <rect id='minT02' width='6' height='6' x='21' y='25' class='svg'/>
-        <rect id='minT02' width='6' height='6' x='21' y='18' class='svg'/>
-        <rect id='minT02' width='6' height='6' x='21' y='11' class='svg'/>
+        <rect id='minT02' width='6' height='6' x='14' y='25' class='svg glw02'/>
+        <rect id='minT02' width='6' height='6' x='21' y='25' class='svg glw02'/>
+        <rect id='minT02' width='6' height='6' x='21' y='18' class='svg glw02'/>
+        <rect id='minT02' width='6' height='6' x='21' y='11' class='svg glw02'/>
       </svg>
     </div>
 
     <div id='T03' class='abs stn btn rnd'>
       <svg id='minT03' width='42px' height='42px'>
-        <rect id='minT03' width='6' height='6' x='25' y='11' class='svg'/>
-        <rect id='minT03' width='6' height='6' x='18' y='18' class='svg'/>
-        <rect id='minT03' width='6' height='6' x='18' y='25' class='svg'/>
-        <rect id='minT03' width='6' height='6' x='11' y='25' class='svg'/>
+        <rect id='minT03' width='6' height='6' x='25' y='11' class='svg glw03'/>
+        <rect id='minT03' width='6' height='6' x='18' y='18' class='svg glw03'/>
+        <rect id='minT03' width='6' height='6' x='18' y='25' class='svg glw03'/>
+        <rect id='minT03' width='6' height='6' x='11' y='25' class='svg glw03'/>
       </svg>
     </div>
 
     <div id='T04' class='abs stn btn rnd'>
       <svg id='minT04' width='42px' height='42px'>
-        <rect id='minT04' width='6' height='6' x='21' y='11' class='svg'/>
-        <rect id='minT04' width='6' height='6' x='21' y='18' class='svg'/>
-        <rect id='minT04' width='6' height='6' x='21' y='25' class='svg'/>
-        <rect id='minT04' width='6' height='6' x='14' y='18' class='svg'/>
+        <rect id='minT04' width='6' height='6' x='21' y='11' class='svg glw04'/>
+        <rect id='minT04' width='6' height='6' x='21' y='18' class='svg glw04'/>
+        <rect id='minT04' width='6' height='6' x='21' y='25' class='svg glw04'/>
+        <rect id='minT04' width='6' height='6' x='14' y='18' class='svg glw04'/>
       </svg>
     </div>
 
     <div id='T05' class='abs stn btn rnd'>
       <svg id='minT05' width='42px' height='42px'>
-        <rect id='minT05' width='6' height='6' x='11' y='25' class='svg'/>
-        <rect id='minT05' width='6' height='6' x='11' y='18' class='svg'/>
-        <rect id='minT05' width='6' height='6' x='18' y='11' class='svg'/>
-        <rect id='minT05' width='6' height='6' x='25' y='18' class='svg'/>
+        <rect id='minT05' width='6' height='6' x='11' y='25' class='svg glw05'/>
+        <rect id='minT05' width='6' height='6' x='11' y='18' class='svg glw05'/>
+        <rect id='minT05' width='6' height='6' x='18' y='11' class='svg glw05'/>
+        <rect id='minT05' width='6' height='6' x='25' y='18' class='svg glw05'/>
       </svg>
     </div>
 
     <div id='T06' class='abs stn btn rnd'>
       <svg id='minT06' width='42px' height='42px'>
-        <rect id='minT06' width='6' height='6' x='11' y='11' class='svg'/>
-        <rect id='minT06' width='6' height='6' x='18' y='25' class='svg'/>
-        <rect id='minT06' width='6' height='6' x='25' y='18' class='svg'/>
-        <rect id='minT06' width='6' height='6' x='18' y='18' class='svg'/>
+        <rect id='minT06' width='6' height='6' x='11' y='11' class='svg glw06'/>
+        <rect id='minT06' width='6' height='6' x='18' y='25' class='svg glw06'/>
+        <rect id='minT06' width='6' height='6' x='25' y='18' class='svg glw06'/>
+        <rect id='minT06' width='6' height='6' x='18' y='18' class='svg glw06'/>
       </svg>
     </div>
 
     <div id='T07' class='abs stn btn rnd'>
       <svg id='minT07' width='42px' height='42px'>
-        <rect id='minT07' width='6' height='6' x='24' y='8' class='svg'/>
-        <rect id='minT07' width='6' height='6' x='17' y='15' class='svg'/>
-        <rect id='minT07' width='6' height='6' x='10' y='22' class='svg'/>
-        <rect id='minT07' width='6' height='6' x='17' y='29' class='svg'/>
+        <rect id='minT07' width='6' height='6' x='24' y='8' class='svg glw07'/>
+        <rect id='minT07' width='6' height='6' x='17' y='15' class='svg glw07'/>
+        <rect id='minT07' width='6' height='6' x='10' y='22' class='svg glw07'/>
+        <rect id='minT07' width='6' height='6' x='17' y='29' class='svg glw07'/>
       </svg>
     </div>
 
     <div id='T08' class='abs stn btn rnd'>
       <svg id='minT08' width='42px' height='42px'>
-        <rect id='minT08' width='6' height='6' x='14' y='28' class='svg'/>
-        <rect id='minT08' width='6' height='6' x='21' y='7' class='svg'/>
-        <rect id='minT08' width='6' height='6' x='21' y='14' class='svg'/>
-        <rect id='minT08' width='6' height='6' x='14' y='21' class='svg'/>
+        <rect id='minT08' width='6' height='6' x='14' y='28' class='svg glw08'/>
+        <rect id='minT08' width='6' height='6' x='21' y='7' class='svg glw08'/>
+        <rect id='minT08' width='6' height='6' x='21' y='14' class='svg glw08'/>
+        <rect id='minT08' width='6' height='6' x='14' y='21' class='svg glw08'/>
       </svg>
     </div>
 
     <div id='T09' class='abs stn btn rnd'>
       <svg id='minT09' width='42px' height='42px'>
-        <rect id='minT09' width='6' height='6' x='14' y='28' class='svg'/>
-        <rect id='minT09' width='6' height='6' x='21' y='8' class='svg'/>
-        <rect id='minT09' width='6' height='6' x='21' y='21' class='svg'/>
-        <rect id='minT09' width='6' height='6' x='14' y='14' class='svg'/>
+        <rect id='minT09' width='6' height='6' x='14' y='28' class='svg glw09'/>
+        <rect id='minT09' width='6' height='6' x='21' y='8' class='svg glw09'/>
+        <rect id='minT09' width='6' height='6' x='21' y='21' class='svg glw09'/>
+        <rect id='minT09' width='6' height='6' x='14' y='14' class='svg glw09'/>
       </svg>
     </div>
 
     <div id='T10' class='abs stn btn rnd'>
       <svg id='minT10' width='42px' height='42px'>
-        <rect id='minT10' width='6' height='6' x='21' y='8' class='svg'/>
-        <rect id='minT10' width='6' height='6' x='14' y='28' class='svg'/>
-        <rect id='minT10' width='6' height='6' x='14' y='21' class='svg'/>
-        <rect id='minT10' width='6' height='6' x='14' y='14' class='svg'/>
+        <rect id='minT10' width='6' height='6' x='21' y='8' class='svg glw10'/>
+        <rect id='minT10' width='6' height='6' x='14' y='28' class='svg glw10'/>
+        <rect id='minT10' width='6' height='6' x='14' y='21' class='svg glw10'/>
+        <rect id='minT10' width='6' height='6' x='14' y='14' class='svg glw10'/>
       </svg>
     </div>
 
     <div id='T11' class='abs stn btn rnd'>
       <svg id='minT11' width='42px' height='42px'>
-        <rect id='minT11' width='6' height='6' x='25' y='8' class='svg'/>
-        <rect id='minT11' width='6' height='6' x='11' y='28' class='svg'/>
-        <rect id='minT11' width='6' height='6' x='11' y='21' class='svg'/>
-        <rect id='minT11' width='6' height='6' x='18' y='14' class='svg'/>
+        <rect id='minT11' width='6' height='6' x='25' y='8' class='svg glw11'/>
+        <rect id='minT11' width='6' height='6' x='11' y='28' class='svg glw11'/>
+        <rect id='minT11' width='6' height='6' x='11' y='21' class='svg glw11'/>
+        <rect id='minT11' width='6' height='6' x='18' y='14' class='svg glw11'/>
       </svg>
     </div>
 
     <div id='T12' class='abs stn btn rnd'>
       <svg id='minT12' width='42px' height='42px'>
-        <rect id='minT12' width='6' height='6' x='25' y='8' class='svg'/>
-        <rect id='minT12' width='6' height='6' x='18' y='15' class='svg'/>
-        <rect id='minT12' width='6' height='6' x='18' y='22' class='svg'/>
-        <rect id='minT12' width='6' height='6' x='11' y='29' class='svg'/>
+        <rect id='minT12' width='6' height='6' x='25' y='8' class='svg glw12'/>
+        <rect id='minT12' width='6' height='6' x='18' y='15' class='svg glw12'/>
+        <rect id='minT12' width='6' height='6' x='18' y='22' class='svg glw12'/>
+        <rect id='minT12' width='6' height='6' x='11' y='29' class='svg glw12'/>
       </svg>
     </div>
 
     <div id='T13' class='abs stn btn rnd'>
       <svg id='minT13' width='42px' height='42px'>
-        <rect id='minT13' width='6' height='6' x='7' y='8' class='svg'/>
-        <rect id='minT13' width='6' height='6' x='14' y='15' class='svg'/>
-        <rect id='minT13' width='6' height='6' x='21' y='22' class='svg'/>
-        <rect id='minT13' width='6' height='6' x='28' y='29' class='svg'/>
+        <rect id='minT13' width='6' height='6' x='7' y='8' class='svg glw13'/>
+        <rect id='minT13' width='6' height='6' x='14' y='15' class='svg glw13'/>
+        <rect id='minT13' width='6' height='6' x='21' y='22' class='svg glw13'/>
+        <rect id='minT13' width='6' height='6' x='28' y='29' class='svg glw13'/>
       </svg>
     </div>
 
     <div id='T14' class='abs stn btn rnd'>
       <svg id='minT14' width='42px' height='42px'>
-        <rect id='minT14' width='6' height='6' x='21' y='28' class='svg'/>
-        <rect id='minT14' width='6' height='6' x='21' y='7' class='svg'/>
-        <rect id='minT14' width='6' height='6' x='21' y='14' class='svg'/>
-        <rect id='minT14' width='6' height='6' x='14' y='21' class='svg'/>
+        <rect id='minT14' width='6' height='6' x='21' y='28' class='svg glw14'/>
+        <rect id='minT14' width='6' height='6' x='21' y='7' class='svg glw14'/>
+        <rect id='minT14' width='6' height='6' x='21' y='14' class='svg glw14'/>
+        <rect id='minT14' width='6' height='6' x='14' y='21' class='svg glw14'/>
       </svg>
     </div>
 
     <div id='T15' class='abs stn btn rnd'>
       <svg id='minT15' width='42px' height='42px'>
-        <rect id='minT15' width='6' height='6' x='21' y='28' class='svg'/>
-        <rect id='minT15' width='6' height='6' x='21' y='7' class='svg'/>
-        <rect id='minT15' width='6' height='6' x='14' y='14' class='svg'/>
-        <rect id='minT15' width='6' height='6' x='14' y='21' class='svg'/>
+        <rect id='minT15' width='6' height='6' x='21' y='28' class='svg glw15'/>
+        <rect id='minT15' width='6' height='6' x='21' y='7' class='svg glw15'/>
+        <rect id='minT15' width='6' height='6' x='14' y='14' class='svg glw15'/>
+        <rect id='minT15' width='6' height='6' x='14' y='21' class='svg glw15'/>
       </svg>
     </div>
 
     <div id='T16' class='abs stn btn rnd'>
       <svg id='minT16' width='42px' height='42px'>
-        <rect id='minT16' width='6' height='6' x='18' y='28' class='svg'/>
-        <rect id='minT16' width='6' height='6' x='18' y='7' class='svg'/>
-        <rect id='minT16' width='6' height='6' x='18' y='14' class='svg'/>
-        <rect id='minT16' width='6' height='6' x='18' y='21' class='svg'/>
+        <rect id='minT16' width='6' height='6' x='18' y='28' class='svg glw16'/>
+        <rect id='minT16' width='6' height='6' x='18' y='7' class='svg glw16'/>
+        <rect id='minT16' width='6' height='6' x='18' y='14' class='svg glw16'/>
+        <rect id='minT16' width='6' height='6' x='18' y='21' class='svg glw16'/>
       </svg>
     </div>
 
     <div id='T17' class='abs stn btn rnd'>
       <svg id='minT17' width='42px' height='42px'>
-        <rect id='minT17' width='6' height='6' x='11' y='11' class='svg'/>
-        <rect id='minT17' width='6' height='6' x='18' y='11' class='svg'/>
-        <rect id='minT17' width='6' height='6' x='25' y='25' class='svg'/>
-        <rect id='minT17' width='6' height='6' x='25' y='18' class='svg'/>
+        <rect id='minT17' width='6' height='6' x='11' y='11' class='svg glw17'/>
+        <rect id='minT17' width='6' height='6' x='18' y='11' class='svg glw17'/>
+        <rect id='minT17' width='6' height='6' x='25' y='25' class='svg glw17'/>
+        <rect id='minT17' width='6' height='6' x='25' y='18' class='svg glw17'/>
       </svg>
     </div>
 
     <div id='T18' class='abs stn btn rnd'>
       <svg id='minT18' width='42px' height='42px'>
-        <rect id='minT18' width='6' height='6' x='14' y='14' class='svg'/>
-        <rect id='minT18' width='6' height='6' x='21' y='14' class='svg'/>
-        <rect id='minT18' width='6' height='6' x='14' y='21' class='svg'/>
-        <rect id='minT18' width='6' height='6' x='21' y='21' class='svg'/>
+        <rect id='minT18' width='6' height='6' x='14' y='14' class='svg glw18'/>
+        <rect id='minT18' width='6' height='6' x='21' y='14' class='svg glw18'/>
+        <rect id='minT18' width='6' height='6' x='14' y='21' class='svg glw18'/>
+        <rect id='minT18' width='6' height='6' x='21' y='21' class='svg glw18'/>
       </svg>
     </div>
 
     <div id='T19' class='abs stn btn rnd'>
       <svg id='minT19' width='42px' height='42px'>
-        <rect id='minT19' width='6' height='6' x='25' y='18' class='svg'/>
-        <rect id='minT19' width='6' height='6' x='18' y='11' class='svg'/>
-        <rect id='minT19' width='6' height='6' x='11' y='18' class='svg'/>
-        <rect id='minT19' width='6' height='6' x='18' y='25' class='svg'/>
+        <rect id='minT19' width='6' height='6' x='25' y='18' class='svg glw19'/>
+        <rect id='minT19' width='6' height='6' x='18' y='11' class='svg glw19'/>
+        <rect id='minT19' width='6' height='6' x='11' y='18' class='svg glw19'/>
+        <rect id='minT19' width='6' height='6' x='18' y='25' class='svg glw19'/>
       </svg>
     </div>
 
