--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ This standard form is called TORUS and this iteration is meant to be it!
     <!--========================================================================
     SELECTED
     -->
-    <div id='selected' class='abs zon rnd'></div>
+    <div id='selection' class='abs zon rnd'></div>
 
   </div> <!-- arena's end -->
 
