--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@ This standard form is called TORUS and this iteration is meant to be it!
     <!--========================================================================
     BALL
     -->
-    <div id='ball' class='abs stn bal rnd ani'></div>
+    <div id='ball' class='abs stn bal rnd ani1'></div>
 
     <!--========================================================================
     ATHLETES
     -->
-    <div id='T00' class='abs stn rnd ani'>
+    <div id='T00' class='abs stn rnd ani1'>
       <svg id='minT00' width='42px' height='42px'>
         <rect id='minT00' width='6' height='6' x='14' y='25' class='svg glw00'/>
         <rect id='minT00' width='6' height='6' x='14' y='18' class='svg glw00'/>
@@ -367,7 +367,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T01' class='abs stn rnd ani'>
+    <div id='T01' class='abs stn rnd ani1'>
       <svg id='minT01' width='42px' height='42px'>
         <rect id='minT01' width='6' height='6' x='14' y='11' class='svg glw01'/>
         <rect id='minT01' width='6' height='6' x='21' y='18' class='svg glw01'/>
@@ -376,7 +376,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T02' class='abs stn rnd ani'>
+    <div id='T02' class='abs stn rnd ani1'>
       <svg id='minT02' width='42px' height='42px'>
         <rect id='minT02' width='6' height='6' x='14' y='25' class='svg glw02'/>
         <rect id='minT02' width='6' height='6' x='21' y='25' class='svg glw02'/>
@@ -385,7 +385,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T03' class='abs stn rnd ani'>
+    <div id='T03' class='abs stn rnd ani1'>
       <svg id='minT03' width='42px' height='42px'>
         <rect id='minT03' width='6' height='6' x='25' y='11' class='svg glw03'/>
         <rect id='minT03' width='6' height='6' x='18' y='18' class='svg glw03'/>
@@ -394,7 +394,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T04' class='abs stn rnd ani'>
+    <div id='T04' class='abs stn rnd ani1'>
       <svg id='minT04' width='42px' height='42px'>
         <rect id='minT04' width='6' height='6' x='21' y='11' class='svg glw04'/>
         <rect id='minT04' width='6' height='6' x='21' y='18' class='svg glw04'/>
@@ -403,7 +403,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T05' class='abs stn rnd ani'>
+    <div id='T05' class='abs stn rnd ani1'>
       <svg id='minT05' width='42px' height='42px'>
         <rect id='minT05' width='6' height='6' x='11' y='25' class='svg glw05'/>
         <rect id='minT05' width='6' height='6' x='11' y='18' class='svg glw05'/>
@@ -412,7 +412,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T06' class='abs stn rnd ani'>
+    <div id='T06' class='abs stn rnd ani1'>
       <svg id='minT06' width='42px' height='42px'>
         <rect id='minT06' width='6' height='6' x='11' y='11' class='svg glw06'/>
         <rect id='minT06' width='6' height='6' x='18' y='25' class='svg glw06'/>
@@ -421,7 +421,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T07' class='abs stn rnd ani'>
+    <div id='T07' class='abs stn rnd ani1'>
       <svg id='minT07' width='42px' height='42px'>
         <rect id='minT07' width='6' height='6' x='24' y='8' class='svg glw07'/>
         <rect id='minT07' width='6' height='6' x='17' y='15' class='svg glw07'/>
@@ -430,7 +430,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T08' class='abs stn rnd ani'>
+    <div id='T08' class='abs stn rnd ani1'>
       <svg id='minT08' width='42px' height='42px'>
         <rect id='minT08' width='6' height='6' x='14' y='28' class='svg glw08'/>
         <rect id='minT08' width='6' height='6' x='21' y='7' class='svg glw08'/>
@@ -439,7 +439,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T09' class='abs stn rnd ani'>
+    <div id='T09' class='abs stn rnd ani1'>
       <svg id='minT09' width='42px' height='42px'>
         <rect id='minT09' width='6' height='6' x='14' y='28' class='svg glw09'/>
         <rect id='minT09' width='6' height='6' x='21' y='8' class='svg glw09'/>
@@ -448,7 +448,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T10' class='abs stn rnd ani'>
+    <div id='T10' class='abs stn rnd ani1'>
       <svg id='minT10' width='42px' height='42px'>
         <rect id='minT10' width='6' height='6' x='21' y='8' class='svg glw10'/>
         <rect id='minT10' width='6' height='6' x='14' y='28' class='svg glw10'/>
@@ -457,7 +457,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T11' class='abs stn rnd ani'>
+    <div id='T11' class='abs stn rnd ani1'>
       <svg id='minT11' width='42px' height='42px'>
         <rect id='minT11' width='6' height='6' x='25' y='8' class='svg glw11'/>
         <rect id='minT11' width='6' height='6' x='11' y='28' class='svg glw11'/>
@@ -466,7 +466,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T12' class='abs stn rnd ani'>
+    <div id='T12' class='abs stn rnd ani1'>
       <svg id='minT12' width='42px' height='42px'>
         <rect id='minT12' width='6' height='6' x='25' y='8' class='svg glw12'/>
         <rect id='minT12' width='6' height='6' x='18' y='15' class='svg glw12'/>
@@ -475,7 +475,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T13' class='abs stn rnd ani'>
+    <div id='T13' class='abs stn rnd ani1'>
       <svg id='minT13' width='42px' height='42px'>
         <rect id='minT13' width='6' height='6' x='7' y='8' class='svg glw13'/>
         <rect id='minT13' width='6' height='6' x='14' y='15' class='svg glw13'/>
@@ -484,7 +484,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T14' class='abs stn rnd ani'>
+    <div id='T14' class='abs stn rnd ani1'>
       <svg id='minT14' width='42px' height='42px'>
         <rect id='minT14' width='6' height='6' x='21' y='28' class='svg glw14'/>
         <rect id='minT14' width='6' height='6' x='21' y='7' class='svg glw14'/>
@@ -493,7 +493,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T15' class='abs stn rnd ani'>
+    <div id='T15' class='abs stn rnd ani1'>
       <svg id='minT15' width='42px' height='42px'>
         <rect id='minT15' width='6' height='6' x='21' y='28' class='svg glw15'/>
         <rect id='minT15' width='6' height='6' x='21' y='7' class='svg glw15'/>
@@ -502,7 +502,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T16' class='abs stn rnd ani'>
+    <div id='T16' class='abs stn rnd ani1'>
       <svg id='minT16' width='42px' height='42px'>
         <rect id='minT16' width='6' height='6' x='18' y='28' class='svg glw16'/>
         <rect id='minT16' width='6' height='6' x='18' y='7' class='svg glw16'/>
@@ -511,7 +511,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T17' class='abs stn rnd ani'>
+    <div id='T17' class='abs stn rnd ani1'>
       <svg id='minT17' width='42px' height='42px'>
         <rect id='minT17' width='6' height='6' x='11' y='11' class='svg glw17'/>
         <rect id='minT17' width='6' height='6' x='18' y='11' class='svg glw17'/>
@@ -520,7 +520,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T18' class='abs stn rnd ani'>
+    <div id='T18' class='abs stn rnd ani1'>
       <svg id='minT18' width='42px' height='42px'>
         <rect id='minT18' width='6' height='6' x='14' y='14' class='svg glw18'/>
         <rect id='minT18' width='6' height='6' x='21' y='14' class='svg glw18'/>
@@ -529,7 +529,7 @@ This standard form is called TORUS and this iteration is meant to be it!
       </svg>
     </div>
 
-    <div id='T19' class='abs stn rnd ani'>
+    <div id='T19' class='abs stn rnd ani1'>
       <svg id='minT19' width='42px' height='42px'>
         <rect id='minT19' width='6' height='6' x='25' y='18' class='svg glw19'/>
         <rect id='minT19' width='6' height='6' x='18' y='11' class='svg glw19'/>
@@ -541,25 +541,25 @@ This standard form is called TORUS and this iteration is meant to be it!
     <!--========================================================================
     ZONES
     -->
-    <div id='zon00' class='abs zon rnd'></div>
-    <div id='zon01' class='abs zon rnd'></div>
-    <div id='zon02' class='abs zon rnd'></div>
-    <div id='zon03' class='abs zon rnd'></div>
+    <div id='zon00' class='abs zon rnd ani2'></div>
+    <div id='zon01' class='abs zon rnd ani2'></div>
+    <div id='zon02' class='abs zon rnd ani2'></div>
+    <div id='zon03' class='abs zon rnd ani2'></div>
 
-    <div id='zon04' class='abs zon rnd'></div>
-    <div id='zon05' class='abs zon rnd'></div>
-    <div id='zon06' class='abs zon rnd'></div>
-    <div id='zon07' class='abs zon rnd'></div>
+    <div id='zon04' class='abs zon rnd ani2'></div>
+    <div id='zon05' class='abs zon rnd ani2'></div>
+    <div id='zon06' class='abs zon rnd ani2'></div>
+    <div id='zon07' class='abs zon rnd ani2'></div>
 
-    <div id='zon08' class='abs zon rnd'></div>
-    <div id='zon09' class='abs zon rnd'></div>
-    <div id='zon10' class='abs zon rnd'></div>
-    <div id='zon11' class='abs zon rnd'></div>
+    <div id='zon08' class='abs zon rnd ani2'></div>
+    <div id='zon09' class='abs zon rnd ani2'></div>
+    <div id='zon10' class='abs zon rnd ani2'></div>
+    <div id='zon11' class='abs zon rnd ani2'></div>
 
-    <div id='zon12' class='abs zon rnd'></div>
-    <div id='zon13' class='abs zon rnd'></div>
-    <div id='zon14' class='abs zon rnd'></div>
-    <div id='zon15' class='abs zon rnd'></div>
+    <div id='zon12' class='abs zon rnd ani2'></div>
+    <div id='zon13' class='abs zon rnd ani2'></div>
+    <div id='zon14' class='abs zon rnd ani2'></div>
+    <div id='zon15' class='abs zon rnd ani2'></div>
 
     <!--========================================================================
     GHOSTS
